--- a/public/style.css
+++ b/public/style.css
@@ -24,3 +24,22 @@ table tr {
 table tr td {
 	display: block;
 }
+
+
+
+.circle
+{
+    border-radius: 50%;
+    border: 3px solid black;
+    width: 50px;
+    height: 50px;
+}
+
+.cargo
+{
+    background: orangered;
+}
+.hatch
+{
+    background: yellow;
+}
